// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input> renders 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
      Object {
        "flex": 1,
        "height": "100%",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#191919",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {color} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
      Object {
        "flex": 1,
        "height": "100%",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    color="green"
    editable={true}
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#191919",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        Object {
          "color": "green",
        },
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {currency} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
      Object {
        "flex": 1,
        "height": "100%",
      },
    ]
  }
>
  <View
    alignItems="center"
    justifyContent="center"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "height": "auto",
          "width": "100%",
        },
        Object {
          "alignItems": "center",
        },
        Object {
          "justifyContent": "flex-start",
        },
        Object {
          "width": "auto",
        },
        Object {
          "paddingRight": 4,
        },
        Object {
          "paddingLeft": 4,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#191919",
            "fontFamily": undefined,
          },
          Object {
            "color": "#191919",
            "fontFamily": undefined,
            "fontSize": 16,
          },
          undefined,
          undefined,
          undefined,
          Object {
            "color": "#a3a3a3",
          },
          Object {
            "paddingLeft": 4,
          },
        ]
      }
    >
      $
    </Text>
  </View>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboardType="numeric"
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#191919",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "width": "100%",
        },
        undefined,
        Object {
          "textAlign": "right",
        },
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {disabled} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
      Object {
        "flex": 1,
        "height": "100%",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={false}
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#191919",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {error} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
      Object {
        "flex": 1,
        "height": "100%",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#191919",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
  <Text />
</View>
`;

exports[`<Input> when {hint} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
      Object {
        "flex": 1,
        "height": "100%",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    hint="Hello World"
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#191919",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {icon} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
      Object {
        "flex": 1,
        "height": "100%",
      },
    ]
  }
>
  <View
    alignItems="center"
    justifyContent="center"
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
          "height": "auto",
          "width": "100%",
        },
        Object {
          "alignItems": "center",
        },
        Object {
          "justifyContent": "flex-start",
        },
        Object {
          "width": "auto",
        },
        Object {
          "paddingRight": 4,
        },
        Object {
          "paddingLeft": 4,
        },
        undefined,
      ]
    }
  >
    <Text />
  </View>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#191919",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {keyboard} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
      Object {
        "flex": 1,
        "height": "100%",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboard="numeric"
    keyboardType="numeric"
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#191919",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {label} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
      Object {
        "flex": 1,
        "height": "100%",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    label="Hello World"
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#191919",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {lines} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
      Object {
        "flex": 1,
        "height": "100%",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    multiline={true}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#191919",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {required} & {requiredIcon} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
      Object {
        "flex": 1,
        "height": "100%",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#191919",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
  <Text />
</View>
`;

exports[`<Input> when {required} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
      Object {
        "flex": 1,
        "height": "100%",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#191919",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
      Object {
        "flex": 1,
        "height": "100%",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#191919",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {valid} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
      Object {
        "flex": 1,
        "height": "100%",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#191919",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value="soyjavi"
  />
  <Text />
</View>
`;

exports[`<Input> when {value} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
      Object {
        "flex": 1,
        "height": "100%",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    multiline={false}
    placeholderTextColor="#a3a3a3"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#191919",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16,
          "height": "100%",
          "width": "100%",
        },
        undefined,
        undefined,
        Object {
          "height": 40,
        },
        undefined,
        undefined,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value="soyjavi"
  />
</View>
`;
